# broadbean

./: .appveyor.yml  .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  New pulsebuilding tutorial part A.ipynb  Pulsebuilding tutorial I.ipynb  Pulsebuilding tutorial II.ipynb  Pulsebuilding tutorial III.ipynb  Pulsebuilding tutorial Natalie Pearson special edition.ipynb  README.md  genindex.html  index.html  objects.inv  pulsebuilding.py  py-modindex.html  pyproject.toml  requirements.txt  ripasso.py  search.html  searchindex.js  setup.cfg  setup.py  test_requirements.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/static/: environment_forge_full.yml
.github/workflows/: cancel_old_jobs.yaml  codeql-analysis.yml  conda-forge-install-and-test.yaml  darker.yaml  docs.yaml  pytest-min-versions.yaml  pytest-non-local.yaml  pytest.yaml  sync-fork.yml  upload_to_pypi.yaml
_modules/: index.html
_modules/broadbean/: blueprint.html  broadbean.html  element.html  plotting.html  ripasso.html  sequence.html  tools.html
_sources/changes/: 0.11.0.rst.txt  index.rst.txt
_sources/examples/: Filter_compensation.ipynb.txt  Making_output_for_Tektronix_AWG70000A.ipynb.txt  Pulse_Building_Tutorial.ipynb.txt  Subsequences.ipynb.txt
_static/: documentation_options.js
broadbean/: __init__.py  _version.py  atoms.py  blueprint.py  broadbean.py  deprecate.py  element.py  loader.py  plotting.py  py.typed  routing.py  segment.py  segment_concept.py  sequence.py  sequence_simple.py  test_segment_concept.py  tools.py  transformations.py  types.py
broadbean/tests/: conftest.py  test_awgfilegeneration.py  test_blueprint.py  test_element.py  test_forging.py  test_ripasso.py  test_sequence.py  test_subsequences.py
changes/: 0.10.0.html  0.11.0.html  index.html
docs/: Elastic time with transformations.ipynb  Example_Write_Read_JSON.ipynb  Filter compensation.ipynb  Flatbean Tutorial.ipynb  Flatbean testground.ipynb  Makefile  Making output for Tektronix AWG70000A.ipynb  Pulse Building Tutorial.ipynb  Segments.ipynb  Subsequences.ipynb  Symbols in Broadbean v1.0.ipynb  conf.py  execute_notebooks.cmd  index.rst  make.bat
docs/_static/: readme
docs/changes/: 0.10.0.rst  0.11.0.rst  index.rst
docs/examples/: Amplitude_LUT_Example.ipynb  Example_Write_Read_JSON.ipynb  Filter_compensation.ipynb  Making_output_for_Tektronix_AWG70000A.ipynb  Plotting_Examples.ipynb  Pulse_Building_Tutorial.ipynb  Subsequences.ipynb  blue.json  boxes.json  elem.json  index.rst  testdata.json
docs/source/: conf.py  index.rst
docs/start/: index.rst
docs/waveform-designer/: adding-new-instruments.md  designer.md  index.rst
examples/: Example_Write_Read_JSON.html  Example_Write_Read_JSON.ipynb  Filter_compensation.html  Filter_compensation.ipynb  Making_output_for_Tektronix_AWG70000A.html  Making_output_for_Tektronix_AWG70000A.ipynb  Pulse_Building_Tutorial.html  Pulse_Building_Tutorial.ipynb  Subsequences.html  Subsequences.ipynb  index.html
notebooks/: New pulsebuilding tutorial part A.ipynb
src/broadbean/: __init__.py  _version.py  blueprint.py  broadbean.py  config.py  element.py  func_serialization.py  plotting.py  ripasso.py  sequence.py  tools.py
src/broadbean/designer/: __init__.py  admin.py  apps.py  manage.py  models.py  rectify_lut.csv  root_urls.py  settings.py  urls.py  utils.py  wsgi.py
src/broadbean/designer/demo_luts/: invert_lut.csv  rectify_lut.csv
src/broadbean/designer/migrations/: 0001_initial.py  0002_awgstationconfig_visa_timeout_and_more.py  __init__.py
src/broadbean/designer/static/waveform_designer/css/: common.css  designer.css  instruments.css  parametric-generator.css  sequencer.css  upload.css
src/broadbean/designer/static/waveform_designer/js/: common-utils.js  drag-reorder-utils.js  element-inspector.js  element-library.js  elements-library-designer.js  instruments.js  modal-utils.js  parametric-generator.js  preview-panel.js  properties-panel.js  segment-library.js  sequence-preview.js  sequence-timeline.js  sequencer.js  sequences-library-sequencer.js  timeline-cards.js  upload-sequence-preview.js  upload.js  waveform-designer.js
src/broadbean/designer/templates/waveform_designer/: base.html  designer.html  instruments.html  parametric_generator.html  sequencer.html  upload.html
src/broadbean/designer/views/: __init__.py  common.py  designer_views.py  instruments_views.py  parametric_views.py  sequencer_views.py  upload_views.py
src/broadbean/instruments/: __init__.py  mock.py  qcodes_base.py  registry.py
src/broadbean/instruments/awg/: __init__.py  tektronix.py
src/broadbean/instruments/base/: __init__.py  awg.py  mock_state.py  scope.py
src/broadbean/instruments/scope/: __init__.py  tektronix.py
src/broadbean/interface/: __init__.py  awg.py  scope.py
start/: index.html
tests/: test_arb_func_serialization.py  test_awgfilegeneration.py  test_blueprint.py  test_element.py  test_forging.py  test_func_serialization.py  test_plotting.py  test_ripasso.py  test_routing.py  test_sequence.py  test_subsequences.py  test_tools.py  test_yaml.py
