[build-system]
requires = [
    "setuptools >= 68.1.2",
    "versioningit >= 2.0.1",
]
build-backend = 'setuptools.build_meta'

[project]
name = "broadbean"
maintainers = [{name = "QCoDeS Core Developers", email = "qcodes-support@microsoft.com"}]
description = "Package for easily generating and manipulating signal pulses."
keywords = ["Pulsebuilding signal processing arbitrary waveforms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
license = {text = "MIT"}
urls = {Homepage = "https://github.com/QCoDeS/broadbean"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.12.1",
    "matplotlib",
    "schema",
    "versioningit>=2.0.1",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = [
    "pytest>=6.2.2",
    "pytest-cov>=3.0.0",
    "coverage[toml]>=6.2",
    "black>=22.3.0",
    "mypy>=0.960",
    "types-pytz>=2021.3.0",
    "jupyter>=1.0.0",
    "hypothesis>=5.49.0",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "nbsphinx",
    "sphinx-jsonschema",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"

[tool.mypy]
show_error_codes = true
enable_error_code = "ignore-without-code"
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "schema"
]
ignore_missing_imports = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.versioningit]
default-version = "0.0"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{branch}.{vcs}{rev}"
dirty = "{next_version}.dev{distance}+{branch}.{vcs}{rev}.dirty"
distance-dirty = "{next_version}.dev{distance}+{branch}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["v*"]

[tool.versioningit.onbuild]
source-file = "broadbean/_version.py"
build-file = "broadbean/_version.py"

[tool.darker]
isort = true

[tool.isort]
profile = "black"
