[metadata]
name = broadbean
version = 0.10.0
maintainer = QCoDeS Core Developers
maintainer_email = qcodes-support@microsoft.com
description = Package for easily generating and manipulating signal 
                pulses. Developed for use with qubits in the quantum 
                computing labs of Copenhagen, Delft, and Sydney, but 
                should be generally useable
keywords = Pulsebuilding signal processing arbitrary waveforms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/QCoDeS/broadbean
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

license = MIT
python_requires = >=3.7
# We might as well require what we know will work
# although older numpy and matplotlib version will probably work too
install_requires = 
    numpy>=1.12.1
    matplotlib
    schema
    setuptools>=48
    versioningit>=1.1.0

[options]
include_package_data = True
package_dir=
    =.
packages=find:
